alertmanager/ingress.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: alertmanager
spec:
  parentRefs:
  - kind: Gateway
    name: shared-gateway
    namespace: ingress
  hostnames:
  - alertmanager.alexos.dev
  rules:
  - backendRefs:
    - name: alertmanager-operated
      port: 9093
